# surface_area_test

./: .gitignore  README.md  create_cone.py  create_cube.py  main.py  neomedsys.py  pyproject.toml  pyrad.py  simpleik.py  theoretical.py
