[tool.poetry]
name = "wdwd"
version = "0.1.0"
description = ""
authors = ["Martin Røvang <martinrovang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nibabel = "^5.2.1"
numpy = "^2.1.1"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
